tests/final/expect/15__diag__axis4_wave3_malformed_include_token_paste_tail_reentry_no_crash.diag
Diagnostics:
<unknown>:0:0: error: macro expansion failed (possible recursion) for '<macro>'
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_axis4_wave3_malformed_include_token_paste_tail_reentry_no_crash_a.h:0:0: error: macro expansion failed (possible recursion) for '<macro>'
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_axis4_wave3_malformed_include_token_paste_tail_reentry_no_crash_a.h:0:0: error: macro expansion failed (possible recursion) for '<macro>'
